improve image alt text across the entire site for better SEO

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <!-- Left Section: Logo and Studio Name -->
         <div class="navbar-left">
             <a href="index.html" class="navbar-brand-link">
-                <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="navbar-logo">
+                <img src="assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="navbar-logo">
                 <span class="navbar-brand">SGP Yoga</span>
             </a>
         </div>
@@ -145,7 +145,7 @@
                         <picture>
                             <source media="(min-width: 1200px)" srcset="assets/photos/inUse/about/aerial-1200.webp">
                             <source media="(min-width: 800px)" srcset="assets/photos/inUse/about/aerial-1080.webp">
-                            <img src="assets/photos/inUse/about/aerial-720.webp" alt="Aerial Yoga" class="style-tile-image" id="aerial-image" loading="lazy">
+                            <img src="assets/photos/inUse/about/aerial-720.webp" alt="A female yogi suspended in a silk hammock performing an aerial yoga pose" class="style-tile-image" id="aerial-image" loading="lazy">
                         </picture>
                         <div class="style-overlay">
                             <div class="style-content">
@@ -160,7 +160,7 @@
                         <picture>
                             <source media="(min-width: 1200px)" srcset="assets/photos/inUse/about/vinyasa-1200.webp">
                             <source media="(min-width: 800px)" srcset="assets/photos/inUse/about/vinyasa-1080.webp">
-                            <img src="assets/photos/inUse/about/vinyasa-720.webp" alt="Vinyasa" class="style-tile-image" id="vinyasa-image" loading="lazy">
+                            <img src="assets/photos/inUse/about/vinyasa-720.webp" alt="A female yogi performing an elegant vinyasa headstand pose on a beach during early sunset" class="style-tile-image" id="vinyasa-image" loading="lazy">
                         </picture>
                         <div class="style-overlay">
                             <div class="style-content">
@@ -175,7 +175,7 @@
                         <picture>
                             <source media="(min-width: 1200px)" srcset="assets/photos/inUse/about/hatha-1200.webp">
                             <source media="(min-width: 800px)" srcset="assets/photos/inUse/about/hatha-1080.webp">
-                            <img src="assets/photos/inUse/about/hatha-720.webp" alt="Hatha" class="style-tile-image" id="hatha-image" loading="lazy">
+                            <img src="assets/photos/inUse/about/hatha-720.webp" alt="A male yogi performing archer pose in a yoga studio, a red brick wall in the background" class="style-tile-image" id="hatha-image" loading="lazy">
                         </picture>
                         <div class="style-overlay">
                             <div class="style-content">
@@ -190,7 +190,7 @@
                         <picture>
                             <source media="(min-width: 1200px)" srcset="assets/photos/inUse/about/kundalini-1200.webp">
                             <source media="(min-width: 800px)" srcset="assets/photos/inUse/about/kundalini-1080.webp">
-                            <img src="assets/photos/inUse/about/kundalini-720.webp" alt="Kundalini" class="style-tile-image" id="kundalini-image" loading="lazy">
+                            <img src="assets/photos/inUse/about/kundalini-720.webp" alt="A male yogi performing a half wheel pose in front of a mountain stream, with a lush, green forest in the background" class="style-tile-image" id="kundalini-image" loading="lazy">
                         </picture>
                         <div class="style-overlay">
                             <div class="style-content">
@@ -226,7 +226,7 @@
                     <!-- Teacher 1 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/about/harjeet.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/harjeet.webp" alt="Harjeet, SGP Yoga Founder & KRI-certified Kundalini Yoga teacher" loading="lazy">
                         </div>
                         <div class="teacher-info">
                             <h3 data-i18n="about:teachers.teacher1.name">Harjeet</h3>
@@ -238,7 +238,7 @@
                     <!-- Teacher 2 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/about/camila.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/camila.webp" alt="Camila, SGP Yoga co-founder & Aerial and Vinyasa Yoga teacher" loading="lazy">
                         </div>
                         <div class="teacher-info">
                             <h3 data-i18n="about:teachers.teacher2.name">Camila</h3>
@@ -250,7 +250,7 @@
                     <!-- Teacher 3 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/about/dani.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/dani.webp" alt="Dani, Aerial Yoga teacher" loading="lazy">
                         </div>
                         <div class="teacher-info">
                             <h3 data-i18n="about:teachers.teacher3.name">Dani</h3>
@@ -262,7 +262,7 @@
                     <!-- Teacher 4 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/about/aro.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/aro.webp" alt="Aro, Hatha & Aerial Yoga teacher" loading="lazy">
                         </div>
                         <div class="teacher-info">
                             <h3 data-i18n="about:teachers.teacher4.name">Aro</h3>
@@ -274,7 +274,7 @@
                     <!-- Teacher 5 -->
                     <div class="teacher-card">
                         <div class="teacher-photo">
-                            <img src="assets/photos/inUse/about/itzel.webp" alt="Teacher Name" loading="lazy">
+                            <img src="assets/photos/inUse/about/itzel.webp" alt="Itzel, Aerial Yoga teacher" loading="lazy">
                         </div>
                         <div class="teacher-info">
                             <h3 data-i18n="about:teachers.teacher5.name">Itzel</h3>
@@ -293,7 +293,7 @@
                     <picture>
                         <source media="(min-width: 1200px)" srcset="assets/photos/inUse/about/hariom-1200.webp">
                         <source media="(min-width: 800px)" srcset="assets/photos/inUse/about/hariom-1080.webp">
-                        <img src="assets/photos/inUse/about/hariom-720.webp" alt="Hari Om" class="space-tile-image" id="hariom-image" loading="lazy">
+                        <img src="assets/photos/inUse/about/hariom-720.webp" alt="Hari Om Yoga Studio in Letran Valle, CDMX" class="space-tile-image" id="hariom-image" loading="lazy">
                     </picture>
                     <div class="space-overlay">
                         <div class="space-content">
@@ -313,7 +313,7 @@
                     <picture>
                         <source media="(min-width: 1200px)" srcset="assets/photos/inUse/about/aguacate-1200.webp">
                         <source media="(min-width: 800px)" srcset="assets/photos/inUse/about/aguacate-1080.webp">
-                        <img src="assets/photos/inUse/about/aguacate-720.webp" alt="Aguacate" class="space-tile-image" id="aguacate-image" loading="lazy">
+                        <img src="assets/photos/inUse/about/aguacate-720.webp" alt="Aguacate Yoga Studio in Coyoacán, CDMX" class="space-tile-image" id="aguacate-image" loading="lazy">
                     </picture>
                     <div class="space-overlay">
                         <div class="space-content">
@@ -339,7 +339,7 @@
                     <!-- Logo and Mission Section -->
                     <div class="footer-column footer-logo-section">
                         <a href="index.html" class="footer-logo-link">
-                            <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="footer-logo">
+                            <img src="assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="footer-logo">
                         </a>
                         <h3 data-i18n="common:footer.mission.title">Our Mission</h3>
                         <p class="footer-mission-text" data-i18n="common:footer.mission.text">Guiding souls to discover their inner light through the transformative practice of yoga.</p>
