--- a/classes.html
+++ b/classes.html
@@ -58,7 +58,7 @@
         <!-- Left Section: Logo and Studio Name -->
         <div class="navbar-left">
             <a href="index.html" class="navbar-brand-link">
-                <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="navbar-logo">
+                <img src="assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="navbar-logo">
                 <span class="navbar-brand">SGP Yoga</span>
             </a>
         </div>
@@ -158,7 +158,7 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <img src="assets/photos/inUse/classes/aro.webp" alt="Aro" class="teacher-photo">
+                                <img src="assets/photos/inUse/classes/aro.webp" alt="Aro, Hatha & Aerial Yoga teacher" class="teacher-photo">
                                 <span class="teacher-name" data-i18n="classes:teachers.aro">Aro</span>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <img src="assets/photos/inUse/classes/itzel.webp" alt="Itzel" class="teacher-photo">
+                                <img src="assets/photos/inUse/classes/itzel.webp" alt="Itzel, Aerial Yoga teacher" class="teacher-photo">
                                 <span class="teacher-name" data-i18n="classes:teachers.itzel">Itzel</span>
                             </div>
                         </div>
@@ -232,7 +232,7 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <img src="assets/photos/inUse/classes/dani.webp" alt="Dani" class="teacher-photo">
+                                <img src="assets/photos/inUse/classes/dani.webp" alt="Dani, Aerial Yoga teacher" class="teacher-photo">
                                 <span class="teacher-name" data-i18n="classes:teachers.dani">Dani</span>
                             </div>
                         </div>
@@ -258,7 +258,7 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <img src="assets/photos/inUse/classes/dani.webp" alt="Dani" class="teacher-photo">
+                                <img src="assets/photos/inUse/classes/dani.webp" alt="Dani, Aerial Yoga teacher" class="teacher-photo">
                                 <span class="teacher-name" data-i18n="classes:teachers.dani">Dani</span>
                             </div>
                         </div>
@@ -280,7 +280,7 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <img src="assets/photos/inUse/classes/aro.webp" alt="Aro" class="teacher-photo">
+                                <img src="assets/photos/inUse/classes/aro.webp" alt="Aro, Hatha & Aerial Yoga teacher" class="teacher-photo">
                                 <span class="teacher-name" data-i18n="classes:teachers.aro">Aro</span>
                             </div>
                         </div>
@@ -369,7 +369,7 @@
                     <!-- Logo and Mission Section -->
                     <div class="footer-column footer-logo-section">
                         <a href="index.html" class="footer-logo-link">
-                            <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="footer-logo">
+                            <img src="assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="footer-logo">
                         </a>
                         <h3 data-i18n="common:footer.mission.title">Our Mission</h3>
                         <p class="footer-mission-text" data-i18n="common:footer.mission.text">Guiding souls to discover their inner light through the transformative practice of yoga.</p>
