--- a/events.html
+++ b/events.html
@@ -58,7 +58,7 @@
         <!-- Left Section: Logo and Studio Name -->
         <div class="navbar-left">
             <a href="index.html" class="navbar-brand-link">
-                <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="navbar-logo">
+                <img src="assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="navbar-logo">
                 <span class="navbar-brand">SGP Yoga</span>
             </a>
         </div>
@@ -148,7 +148,7 @@
                     <picture>
                         <source media="(min-width: 1200px)" srcset="assets/photos/inUse/events/workshops-1200.webp">
                         <source media="(min-width: 800px)" srcset="assets/photos/inUse/events/workshops-1080.webp">
-                        <img src="assets/photos/inUse/events/workshops-720.webp" alt="Workshops" class="event-type-image" loading="lazy">
+                        <img src="assets/photos/inUse/events/workshops-720.webp" alt="A close up on a yogi playing a tibetan sound bowl during a sound healing session" class="event-type-image" loading="lazy">
                     </picture>
                     <div class="event-type-overlay">
                         <div class="event-type-content">
@@ -163,7 +163,7 @@
                     <picture>
                         <source media="(min-width: 1200px)" srcset="assets/photos/inUse/events/retreats-1200.webp">
                         <source media="(min-width: 800px)" srcset="assets/photos/inUse/events/retreats-1080.webp">
-                        <img src="assets/photos/inUse/events/retreats-720.webp" alt="Retreats" class="event-type-image" loading="lazy">
+                        <img src="assets/photos/inUse/events/retreats-720.webp" alt="A female yogi performing a hanstand with legs spread out on a beach during sunset" class="event-type-image" loading="lazy">
                     </picture>
                     <div class="event-type-overlay">
                         <div class="event-type-content">
@@ -178,7 +178,7 @@
                     <picture>
                         <source media="(min-width: 1200px)" srcset="assets/photos/inUse/events/teacher-trainings-1080.webp">
                         <source media="(min-width: 800px)" srcset="assets/photos/inUse/events/teacher-trainings-1080.webp">
-                        <img src="assets/photos/inUse/events/teacher-trainings-720.webp" alt="Teacher Trainings" class="event-type-image" loading="lazy">
+                        <img src="assets/photos/inUse/events/teacher-trainings-720.webp" alt="A group of teacher training students standing in a cricle and holding hands, eyes closed, meditating together" class="event-type-image" loading="lazy">
                     </picture>
                     <div class="event-type-overlay">
                         <div class="event-type-content">
@@ -259,7 +259,7 @@
                     <!-- Logo and Mission Section -->
                     <div class="footer-column footer-logo-section">
                         <a href="index.html" class="footer-logo-link">
-                            <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="footer-logo">
+                            <img src="assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="footer-logo">
                         </a>
                         <h3 data-i18n="common:footer.mission.title">Our Mission</h3>
                         <p class="footer-mission-text" data-i18n="common:footer.mission.text">Guiding souls to discover their inner light through the transformative practice of yoga.</p>
