--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <!-- Left Section: Logo and Studio Name -->
         <div class="navbar-left">
             <a href="index.html" class="navbar-brand-link">
-                <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="navbar-logo">
+                <img src="assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="navbar-logo">
                 <span class="navbar-brand">SGP Yoga</span>
             </a>
         </div>
@@ -239,7 +239,7 @@
             <picture class="hero-image">
                 <source media="(min-width: 2048px)" srcset="assets/photos/inUse/home/hero-2560.webp">
                 <source media="(min-width: 1440px)" srcset="assets/photos/inUse/home/hero-1920.webp">
-                <img src="assets/photos/inUse/home/hero-1280.webp" alt="SGP Yoga Studio" loading="eager">
+                <img src="assets/photos/inUse/home/hero-1280.webp" alt="Harjeet, SGP Yoga Founder & Kundalini Yoga teacher sitting in a contemplative posture in front of a lake in Hidalgo, Mexico" loading="eager">
             </picture>
             
             <!-- Hero content positioned in upper-left -->
@@ -268,7 +268,7 @@
                         <picture>
                             <source media="(min-width: 1200px)" srcset="assets/photos/inUse/home/classes-1200.webp">
                             <source media="(min-width: 800px)" srcset="assets/photos/inUse/home/classes-1080.webp">
-                            <img src="assets/photos/inUse/home/classes-720.webp" alt="Yoga Classes" loading="lazy">
+                            <img src="assets/photos/inUse/home/classes-720.webp" alt="A male yogi in triangle pose, a mountain stream and lush, green forest in the background" loading="lazy">
                         </picture>
                     </div>
                 </div>
@@ -284,7 +284,7 @@
                         <picture>
                             <source media="(min-width: 1200px)" srcset="assets/photos/inUse/home/events-1200.webp">
                             <source media="(min-width: 800px)" srcset="assets/photos/inUse/home/events-1080.webp">
-                            <img src="assets/photos/inUse/home/events-720.webp" alt="Yoga Events" loading="lazy">
+                            <img src="assets/photos/inUse/home/events-720.webp" alt="A female yogi entering a hand stand on a beach during sunset" loading="lazy">
                         </picture>
                     </div>
                     
@@ -328,7 +328,7 @@
                                 <picture>
                                     <source media="(min-width: 1200px)" srcset="assets/photos/inUse/testimonials/testimonial1-1200.webp">
                                     <source media="(min-width: 800px)" srcset="assets/photos/inUse/testimonials/testimonial1-1080.webp">
-                                    <img src="assets/photos/inUse/testimonials/testimonial1-720.webp" alt="Ramzi Anh Do" loading="lazy">
+                                    <img src="assets/photos/inUse/testimonials/testimonial1-720.webp" alt="Ramzi Anh Do portrait image - a satisfied client who experienced Harjeet's Kundalini Yoga classes in Cambodia" loading="lazy">
                                 </picture>
                             </div>
                             <div class="testimonial-content">
@@ -348,7 +348,7 @@
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
                                 <picture>
-                                    <img src="assets/photos/inUse/testimonials/testimonial2-720.webp" alt="Agnieszka Malek" loading="lazy">
+                                    <img src="assets/photos/inUse/testimonials/testimonial2-720.webp" alt="Agnieszka Malek portrait image - a satisfied client who experienced Harjeet's Kundalini Yoga classes in Poland" loading="lazy">
                                 </picture>
                             </div>
                             <div class="testimonial-content">
@@ -368,7 +368,7 @@
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
                                 <picture>
-                                    <img src="assets/photos/inUse/testimonials/testimonial3-720.webp" alt="Marcin Topolski" loading="lazy">
+                                    <img src="assets/photos/inUse/testimonials/testimonial3-720.webp" alt="Marcin Topolski portait image - Harjeet's first Kundalini Yoga teacher" loading="lazy">
                                 </picture>
                             </div>
                             <div class="testimonial-content">
@@ -390,7 +390,7 @@
                                 <picture>
                                     <source media="(min-width: 1200px)" srcset="assets/photos/inUse/testimonials/testimonial4-1200.webp">
                                     <source media="(min-width: 800px)" srcset="assets/photos/inUse/testimonials/testimonial4-1080.webp">
-                                    <img src="assets/photos/inUse/testimonials/testimonial4-720.webp" alt="Lena Tiedmann" loading="lazy">
+                                    <img src="assets/photos/inUse/testimonials/testimonial4-720.webp" alt="Lena Tiedmann portait image - a satisfied client who experienced Harjeet's Kundalini Yoga classes in Cambodia" loading="lazy">
                                 </picture>
                             </div>
                             <div class="testimonial-content">
@@ -410,7 +410,7 @@
                                 <picture>
                                     <source media="(min-width: 1200px)" srcset="assets/photos/inUse/testimonials/testimonial5-1200.webp">
                                     <source media="(min-width: 800px)" srcset="assets/photos/inUse/testimonials/testimonial5-1080.webp">
-                                    <img src="assets/photos/inUse/testimonials/testimonial5-720.webp" alt="Svetlana Epifanova" loading="lazy">
+                                    <img src="assets/photos/inUse/testimonials/testimonial5-720.webp" alt="Svetlana Epifanova portait image - a satisfied client who experienced Harjeet's Kundalini Yoga classes in Cambodia" loading="lazy">
                                 </picture>
                             </div>
                             <div class="testimonial-content">
@@ -430,7 +430,7 @@
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
                                 <picture>
-                                    <img src="assets/photos/inUse/testimonials/testimonial6-720.webp" alt="Rosario Hernández Nieves" loading="lazy">
+                                    <img src="assets/photos/inUse/testimonials/testimonial6-720.webp" alt="Rosario Hernández Nieves portait image - a satisfied client who experienced Harjeet's Kundalini Yoga classes in Cambodia" loading="lazy">
                                 </picture>
                             </div>
                             <div class="testimonial-content">
@@ -450,7 +450,7 @@
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
                                 <picture>
-                                    <img src="assets/photos/inUse/testimonials/testimonial7-720.webp" alt="Rafał Duran" loading="lazy">
+                                    <img src="assets/photos/inUse/testimonials/testimonial7-720.webp" alt="Rafał Duran portait image - a satisfied client who experienced Harjeet's Kundalini Yoga classes in Poland" loading="lazy">
                                 </picture>
                             </div>
                             <div class="testimonial-content">
@@ -470,7 +470,7 @@
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
                                 <picture>
-                                    <img src="assets/photos/inUse/testimonials/testimonial8-720.webp" alt="Julián Alonso" loading="lazy">
+                                    <img src="assets/photos/inUse/testimonials/testimonial8-720.webp" alt="Julián Alonso portait image - a satisfied client who experienced Harjeet's Kundalini Yoga classes in Cambodia" loading="lazy">
                                 </picture>
                             </div>
                             <div class="testimonial-content">
@@ -514,7 +514,7 @@
                     <!-- Logo and Mission Section -->
                     <div class="footer-column footer-logo-section">
                         <a href="index.html" class="footer-logo-link">
-                            <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="footer-logo">
+                            <img src="assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="footer-logo">
                         </a>
                         <h3 data-i18n="common:footer.mission.title">Our Mission</h3>
                         <p class="footer-mission-text" data-i18n="common:footer.mission.text">Guiding souls to discover their inner light through the transformative practice of yoga.</p>
