add intersection observer js to the homepage for better responsive classes & events section styling
the sections now smoothly change background color on scroll

--- a/index.html
+++ b/index.html
@@ -714,5 +714,6 @@
     <script src="js/i18n.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/testimonials.js"></script>
+    <script src="js/sectionObserver.js"></script>
 </body>
 </html>
