added a theme tag to force safe area to white on iOS Safari

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ffffff">
     <title data-i18n="common:pageTitles.home">SGP Yoga - Yoga Classes in Mexico City | CDMX Studio</title>
     <meta name="description" content="Transformative yoga classes in Mexico City. Expert-led Kundalini, Vinyasa, Hatha & Aerial Yoga in CDMX. Join workshops, retreats & teacher trainings. Book your class today!" data-i18n="home:meta.description">
     
