add meta tags to html for google verification

--- a/classes.html
+++ b/classes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="d7JoYGZFD3j4ovz9GDIe_fN55bDYiExfHK_jAJeZy-g" />
     <meta name="theme-color" content="#ffffff">
     <title data-i18n="common:pageTitles.classes">Yoga Classes Schedule Mexico City | SGP Yoga CDMX</title>
     <meta name="description" content="View our weekly yoga class schedule in Mexico City. Morning & evening Aerial, Vinyasa, Hatha & Kundalini sessions for all levels. Book your CDMX yoga class now!" data-i18n="classes:meta.description">
