--- a/es/about.html
+++ b/es/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="d7JoYGZFD3j4ovz9GDIe_fN55bDYiExfHK_jAJeZy-g" />
     <meta name="theme-color" content="#ffffff">
     <title>About SGP Yoga - Kundalini, Vinyasa & Aerial Yoga CDMX</title>
     <meta name="description" content="Meet SGP Yoga's passionate teachers in Mexico City. Explore our yoga philosophy and discover Kundalini, Vinyasa, Hatha & Aerial styles. Join our CDMX yoga community today!" data-i18n="about:meta.description">
