--- a/es/index.html
+++ b/es/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="d7JoYGZFD3j4ovz9GDIe_fN55bDYiExfHK_jAJeZy-g" />
     <meta name="theme-color" content="#ffffff">
     <title>SGP Yoga - Yoga Classes in Mexico City | CDMX Studio</title>
     <meta name="description" content="Transformative yoga classes in Mexico City. Expert-led Kundalini, Vinyasa, Hatha & Aerial Yoga in CDMX. Join workshops, retreats & teacher trainings. Book your class today!" data-i18n="home:meta.description">
@@ -729,5 +730,6 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
     <script src="/js/i18n.js"></script>
     <script src="/js/navbar.js"></script>
     <script src="/js/testimonials.js"></script>
+    <script src="/js/sectionObserver.js"></script>
 </body>
 </html>
