--- a/events.html
+++ b/events.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="d7JoYGZFD3j4ovz9GDIe_fN55bDYiExfHK_jAJeZy-g" />
     <meta name="theme-color" content="#ffffff">
     <title data-i18n="common:pageTitles.events">Yoga Workshops, Retreats & Teacher Training | SGP Yoga CDMX</title>
     <meta name="description" content="Join transformative yoga workshops, multi-day retreats & teacher training in Mexico City. Deepen your practice with SGP Yoga. Limited spots in CDMX. Register now!" data-i18n="events:meta.description">
