add node test script for validating seo tags on all pages

--- a/es/index.html
+++ b/es/index.html
@@ -663,7 +663,7 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "SGP Yoga",
-      "url": "https://www.sgpyoga.co",
+      "url": "https://sgpyoga.co",
       "telephone": "+525539061305",
       "priceRange": "$$",
       "address": {
