--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "SGP Yoga",
-      "url": "https://www.sgpyoga.co",
+      "url": "https://sgpyoga.co",
       "telephone": "+525539061305",
       "priceRange": "$$",
       "address": {
