fix i18n spanish site build script and 11ty base layout to use self-referencing canonical tags for better SEO

--- a/es/about.html
+++ b/es/about.html
@@ -35,7 +35,7 @@
     <meta name="twitter:image" content="https://sgpyoga.co/assets/photos/social/og-about.webp">
     
     <!-- SEO: Canonical & Hreflang -->
-    <link rel="canonical" href="https://sgpyoga.co/about.html">
+    <link rel="canonical" href="https://sgpyoga.co/es/about.html">
     <link rel="alternate" hreflang="en" href="https://sgpyoga.co/about.html">
     <link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/about.html">
     <link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/about.html">
