--- a/es/events.html
+++ b/es/events.html
@@ -35,7 +35,7 @@
     <meta name="twitter:image" content="https://sgpyoga.co/assets/photos/social/og-events.webp">
     
     <!-- SEO: Canonical & Hreflang -->
-    <link rel="canonical" href="https://sgpyoga.co/events.html">
+    <link rel="canonical" href="https://sgpyoga.co/es/events.html">
     <link rel="alternate" hreflang="en" href="https://sgpyoga.co/events.html">
     <link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/events.html">
     <link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/events.html">
