fix missing translation keys in i18n system

--- a/es/about.html
+++ b/es/about.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/logo/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/logo/apple-touch-icon.png">
     
-    <title>About SGP Yoga - Kundalini, Vinyasa & Aerial Yoga CDMX</title>
+    <title>Acerca de SGP Yoga - Kundalini, Vinyasa y Yoga Aéreo CDMX</title>
     <meta name="description" content="Meet SGP Yoga's passionate teachers in Mexico City. Explore our yoga philosophy and discover Kundalini, Vinyasa, Hatha & Aerial styles. Join our CDMX yoga community today!" data-i18n="about:meta.description">
     
     <!-- Open Graph / Facebook -->
