--- a/es/events.html
+++ b/es/events.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/logo/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/logo/apple-touch-icon.png">
     
-    <title>Yoga Workshops, Retreats & Teacher Training | SGP Yoga CDMX</title>
+    <title>Talleres de Yoga, Retiros y Formación de Maestros | SGP Yoga CDMX</title>
     <meta name="description" content="Join transformative yoga workshops, multi-day retreats & teacher training in Mexico City. Deepen your practice with SGP Yoga. Limited spots in CDMX. Register now!" data-i18n="events:meta.description">
     
     <!-- Open Graph / Facebook -->
