--- a/es/index.html
+++ b/es/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/logo/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/logo/apple-touch-icon.png">
     
-    <title>SGP Yoga - Yoga Classes in Mexico City | CDMX Studio</title>
+    <title>SGP Yoga - Clases de Yoga en la Ciudad de México | Estudio CDMX</title>
     <meta name="description" content="Transformative yoga classes in Mexico City. Expert-led Kundalini, Vinyasa, Hatha & Aerial Yoga in CDMX. Join workshops, retreats & teacher trainings. Book your class today!" data-i18n="home:meta.description">
     
     <!-- Open Graph / Facebook -->
