--- a/es/classes.html
+++ b/es/classes.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/logo/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/logo/apple-touch-icon.png">
     
-    <title>Yoga Classes Schedule Mexico City | SGP Yoga CDMX</title>
+    <title>Horario de Clases de Yoga Ciudad de México | SGP Yoga CDMX</title>
     <meta name="description" content="View our weekly yoga class schedule in Mexico City. Morning & evening Aerial, Vinyasa, Hatha & Kundalini sessions for all levels. Book your CDMX yoga class now!" data-i18n="classes:meta.description">
     
     <!-- Open Graph / Facebook -->
