fix faq links and redirect

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                             <i data-lucide="minus" class="faq-icon faq-icon-minus"></i>
                         </button>
                         <div class="faq-answer" id="faq-answer-1">
-                            <p data-i18n="[html]home:faq.questions.0.a">We offer a wide variety of yoga styles such as Hatha, Vinyasa, Aerial and Kundalini. We also regularly organise thematic workshops such as sound healing sessions or yoga philosophy classes. This variety ensures that everyone can find a class that resonates with their soul.</p>
+                            <p data-i18n="home:faq.questions.0.a" data-i18n-html="true">We offer a wide variety of yoga styles such as Hatha, Vinyasa, Aerial and Kundalini. We also regularly organise thematic workshops such as sound healing sessions or yoga philosophy classes. This variety ensures that everyone can find a class that resonates with their soul.</p>
                         </div>
                     </div>
 
@@ -599,7 +599,7 @@
                             <i data-lucide="minus" class="faq-icon faq-icon-minus"></i>
                         </button>
                         <div class="faq-answer" id="faq-answer-2">
-                            <p data-i18n="[html]home:faq.questions.1.a">Currently, we offer classes in two distinct locations in Mexico City - Hari Om and Aguacate.</p>
+                            <p data-i18n="home:faq.questions.1.a" data-i18n-html="true">Currently, we offer classes in two distinct locations in Mexico City - Hari Om and Aguacate.</p>
                         </div>
                     </div>
 
@@ -635,7 +635,7 @@
                             <i data-lucide="minus" class="faq-icon faq-icon-minus"></i>
                         </button>
                         <div class="faq-answer" id="faq-answer-5">
-                            <p data-i18n="[html]home:faq.questions.4.a">Hatha Yoga is an excellent starting point for beginners due to its slower pace and focus on foundational poses.</p>
+                            <p data-i18n="home:faq.questions.4.a" data-i18n-html="true">Hatha Yoga is an excellent starting point for beginners due to its slower pace and focus on foundational poses.</p>
                         </div>
                     </div>
 
@@ -719,7 +719,7 @@
                             <i data-lucide="minus" class="faq-icon faq-icon-minus"></i>
                         </button>
                         <div class="faq-answer" id="faq-answer-12">
-                            <p data-i18n="[html]home:faq.questions.11.a">Yes! We regularly organize special yoga events & experiences beyond weekly classes.</p>
+                            <p data-i18n="home:faq.questions.11.a" data-i18n-html="true">Yes! We regularly organize special yoga events & experiences beyond weekly classes.</p>
                         </div>
                     </div>
 
