--- a/es/index.html
+++ b/es/index.html
@@ -601,7 +601,7 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
                             <i data-lucide="minus" class="faq-icon faq-icon-minus"></i>
                         </button>
                         <div class="faq-answer" id="faq-answer-1">
-                            <p>We offer a wide variety of yoga styles such as Hatha, Vinyasa, Aerial and Kundalini. We also regularly organise thematic workshops such as sound healing sessions or yoga philosophy classes. This variety ensures that everyone can find a class that resonates with their soul.</p>
+                            <p data-i18n-html="true">Ofrecemos una amplia variedad de estilos de yoga como Hatha, Vinyasa, Aéreo y Kundalini. También organizamos regularmente talleres temáticos como sesiones de sanación sonora o clases de filosofía del yoga. Esta variedad asegura que todos puedan encontrar una clase que resuene con su alma. Consulta nuestro horario actual de clases en: <a href='https://sgpyoga.co/es/classes' target='_blank' rel='noopener'>sgpyoga.co/classes</a>.</p>
                         </div>
                     </div>
 
@@ -613,7 +613,7 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
                             <i data-lucide="minus" class="faq-icon faq-icon-minus"></i>
                         </button>
                         <div class="faq-answer" id="faq-answer-2">
-                            <p>Currently, we offer classes in two distinct locations in Mexico City - Hari Om and Aguacate.</p>
+                            <p data-i18n-html="true">Actualmente, ofrecemos clases en dos ubicaciones distintas en la Ciudad de México - Hari Om y Aguacate. Hari Om es un espacio pequeño pero acogedor y tranquilo en Letrán Valle, Benito Juárez (Calle Tres Zapotes 128), mientras que Aguacate es un hermoso estudio más grande en Coyoacán (Callejón de Aguacate 3), muy cerca del Parque de los Viveros. Puedes encontrar las ubicaciones exactas con enlaces de Google Maps en nuestra página sobre nosotros: <a href='https://sgpyoga.co/es/about' target='_blank' rel='noopener'>sgpyoga.co/about</a>.</p>
                         </div>
                     </div>
 
@@ -649,7 +649,7 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
                             <i data-lucide="minus" class="faq-icon faq-icon-minus"></i>
                         </button>
                         <div class="faq-answer" id="faq-answer-5">
-                            <p>Hatha Yoga is an excellent starting point for beginners due to its slower pace and focus on foundational poses.</p>
+                            <p data-i18n-html="true">Hatha Yoga es un excelente punto de partida para principiantes debido a su ritmo más lento y enfoque en posturas fundamentales. Si prefieres algo más dinámico, Vinyasa ofrece secuencias fluidas y también es muy accesible. Para aquellos que buscan profundidad espiritual, Kundalini Yoga pone énfasis en el trabajo de respiración, energía y meditación, mientras que Yoga Aéreo proporciona una experiencia alegre y única. Te animamos a probar diferentes estilos antes de comprometerte con uno. Aprende más en nuestro blog: <a href='https://sgpyoga.co/blog/dist/posts/es/yogastyles/' target='_blank' rel='noopener'>sgpyoga.co/blog</a></p>
                         </div>
                     </div>
 
@@ -733,7 +733,7 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
                             <i data-lucide="minus" class="faq-icon faq-icon-minus"></i>
                         </button>
                         <div class="faq-answer" id="faq-answer-12">
-                            <p>Yes! We regularly organize special yoga events & experiences beyond weekly classes.</p>
+                            <p data-i18n-html="true">¡Sí! Organizamos regularmente eventos y experiencias especiales de yoga más allá de las clases semanales. Nuestros talleres en la Ciudad de México abarcan filosofía del yoga, sanación sonora, kirtan y más. Los retiros tienen lugar en ubicaciones remotas en México e internacionalmente - cada uno tiene un tema diferente y atiende diferentes necesidades. Las formaciones de maestros están disponibles como inmersiones intensivas o programas de fin de semana a ritmo más lento. Consulta nuestros próximos eventos en <a href='https://sgpyoga.co/es/events' target='_blank' rel='noopener'>sgpyoga.co/events</a>.</p>
                         </div>
                     </div>
 
