add faq section SEO schema generator script to imrpove SEO

--- a/es/index.html
+++ b/es/index.html
@@ -965,6 +965,7 @@ El profundo conocimiento de Kundalini de Harjeet nos permite tener una práctica
     <script src="/js/navbar.js"></script>
     <script src="/js/testimonials.js"></script>
     <script src="/js/faq.js"></script>
+    <script src="/js/faqSchema.js"></script>
     <script src="/js/sectionObserver.js"></script>
 </body>
 </html>
