--- a/index.html
+++ b/index.html
@@ -951,6 +951,7 @@
     <script src="js/navbar.js"></script>
     <script src="js/testimonials.js"></script>
     <script src="js/faq.js"></script>
+    <script src="js/faqSchema.js"></script>
     <script src="js/sectionObserver.js"></script>
 </body>
 </html>
